# phl-lp-cv

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: .gitignore  CMakeLists.txt  cpplint.py
3rd/LpCVT/: CMakeLists.txt  Makefile  main.cpp
3rd/LpCVT/LpCVT/combinatorics/: delaunay_CGAL.cpp  mesh.h
3rd/LpCVT/LpCVT/common/: line_stream.h  vecg.h
3rd/LpCVT/data/: three_holes.xyz
3rd/OpenVolumeMesh/src/: CMakeLists.txt
3rd/mma/src/mma/: MMASolver.cpp
3rd/nested_cages/: CMakeLists.txt
3rd/nested_cages/MeshFix-v2.1/include/TMesh/: tin.h
3rd/nested_cages/MeshFix-v2.1/src/MeshFix/: meshfix.cpp
3rd/nested_cages/cmake/: FindLIBIGL.cmake
3rd/nested_cages/include/: nested_cages.h
3rd/nested_cages/src/: nested_cages.cpp
3rd/tetgen/: CMakeLists.txt
cmake/: FindGMP.cmake  FindMPFR.cmake  vtk.cmake
da-bld/: CMakeLists.txt  __init__.py  auto_load.py  manifest.py  menu.py  project_config.py.in
da-bld/bld_lattice_design/: field_driven_tpms.py  field_driven_voxel.py  hexahedron_structure.py  tpms_structure.py  voronoi_structure.py  voxel_structure.py
da-bld/bld_lattice_library/: BasicCalculaters.py  all_lines.json  lattice_library.py  line3_valid.json  load_lattice_voxel.py  mircostruct.npy  offsetNodelist.py  p2voxel.py  user_setting.txt
da-bld/bld_quasistatic_simulation/: cbn_polyhedron.py  fem_tetrahedral.py
da-cmd/: CMakeLists.txt
da-cpt/: CMakeLists.txt
da-cpt/cpt-l1-norm-polycube/: polycube.cpp  polycube.h
da-cpt/cpt-linear-solver/: cholmod_solver.cpp.impl  cholmod_solver.h  dummy.cpp  eigen_solver.cpp.impl  eigen_solver.h  linear_solver.cpp.impl  linear_solver.h
da-ent/: CMakeLists.txt
da-ent/ent-lattice-design/: CMakeLists.txt
da-ent/ent-lattice-design/lad-field-driven-tpms/: density.cpp  density.h  entry.cpp  work.cpp
da-ent/ent-lattice-design/lad-field-driven-voxel/: density.cpp  entry.cpp  utility.cpp  utility.h  work.cpp
da-ent/ent-lattice-design/lad-hexahedron-structure/: entry.cpp  utility.cpp  utility.h  work.cpp
da-ent/ent-lattice-design/lad-tpms-structure/: entry.cpp  work.cpp
da-ent/ent-lattice-design/lad-voronoi-structure/: entry.cpp  work.cpp
da-ent/ent-lattice-design/lad-voxel-structure/: entry.cpp  work.cpp
da-ent/ent-physical-lattice/: CMakeLists.txt
da-ent/ent-physical-lattice/phl-centroid-voronoi/: entry.cpp  modeling.cpp  modeling.h  optimization.cpp  optimization.h  utilis.cpp  work.cpp
da-ent/ent-physical-lattice/phl-lp-centroid-voronoi/: anisotropic_mat_utils.cpp  anisotropic_mat_utils.h  entry.cpp  fem_config.cpp  modeling.h  optimization.cpp  optimization.h  utilis.h  work.cpp
da-ent/ent-physical-lattice/phl-lp-centroid-voronoi-thermo-mech/: anisotropic_mat_utils.cpp  entry.cpp  fem_config.h  lp_cvt_wrapper.cpp  modeling.cpp  optimization.cpp
da-ent/ent-physical-lattice/phl-lp-cv-thermo-mech/: anisotropic_mat_utils.cpp  anisotropic_mat_utils.h  config.cpp  config.h  config.json  entry.cpp  lp_cvt_wrapper.cpp  lp_cvt_wrapper.h  modeling.cpp  modeling.h  optimization.cpp  optimization.h  utilis.cpp  work.cpp
da-ent/ent-quasistatic-simulation/: CMakeLists.txt
da-ent/ent-quasistatic-simulation/qss-cbn-polyhedron/: entry.cpp  utilis.cpp  utilis.h  work.cpp
da-ent/ent-quasistatic-simulation/qss-cbn-preprocess/: entry.cpp  work.cpp
da-ent/ent-quasistatic-simulation/qss-fem-tetrahedral/: config.cpp  config.h  entry.cpp  work.cpp
da-ent/ent-texture-3d/: CMakeLists.txt
da-ent/ent-texture-3d/t3d-surface-hole/: entry.cpp  parameterization.cpp  parameterization.h  sample.cpp  sample.h  work.cpp
da-ent/ent-topology-optimaztion/: CMakeLists.txt
da-ent/ent-topology-optimaztion/top-density-field-display/: entry.cpp  work.cpp
da-ent/ent-topology-optimaztion/top-heat-arbitrary-model/: config.cpp  config.h  work.cpp
da-ent/ent-topology-optimaztion/top-heat-regular-model/: config.cpp  config.h  entry.cpp  work.cpp
da-ent/ent-topology-optimaztion/top-mech-arbitrary-model/: config.cpp  config.h  entry.cpp  work.cpp
da-ent/ent-topology-optimaztion/top-mech-regular-model/: config.cpp  config.h  entry.cpp  work.cpp
da-sha/: CMakeLists.txt
da-sha/sha-base-framework/: declarations.h  eigen.h  frame.cpp  frame.h  logger.h
da-sha/sha-entry-framework/: frame.cpp  frame.h
da-sha/sha-fem-quasistatic/: fem_tet.h
da-sha/sha-fem-quasistatic/fem_tet/: simulation.cpp  simulation.h
da-sha/sha-fem-thermoelastic/: Amgcl.cpp  Amgcl.h  AmgclCuda.cpp  AmgclCuda.h  HeatSimulation.cpp  HeatSimulation.h  LinearSolver.h  ThermoelasticSim.cpp  ThermoelasticSim.cu  ThermoelasticSim.h  ThermoelasticWrapper.cpp  ThermoelasticWrapper.h  optimization.cpp  optimization.h  simulation.h  util.cpp  util.h
da-sha/sha-hexahedron-generation/: polycube_based.cpp  polycube_based.h  polycube_based_deformation.cpp  polycube_based_remesh.cpp  polycube_based_tetrahedral_polycube.cpp  polycube_based_utility.cpp  polycube_based_utility.h
da-sha/sha-implicit-modeling/: field_function.h  field_tpms.h  implicit.cpp  implicit.h  implicit_foundation.cpp  tpms_family.h  utility.cpp  utility.h
da-sha/sha-io-foundation/: data_io.h  mesh_io.cpp  mesh_io.h
da-sha/sha-simulation-3d/: CBN.h
da-sha/sha-simulation-3d/CBN/: background_mesh.cpp  background_mesh.h  geometry.h  physical_domain.cpp  physical_domain.h  simulation.cpp  simulation.h  utils.cpp  utils.h
da-sha/sha-simulation-utils/: boundary_conditions.h  io_utils.cpp  io_utils.h  material_utils.cpp  material_utils.h  other_utils.cpp  other_utils.h  shape_function_utils.cpp  shape_function_utils.h
da-sha/sha-surface-mesh/: matmesh.cpp  matmesh.h  mesh3.h  sample.cpp  sample.h
da-sha/sha-topology-optimization-3d/: Boundary.cpp  Boundary.h  HeatIrregularMesh.h  HeatMesh.h  IrregularMesh.cpp  IrregularMesh.h  Material.cpp  Material.hpp  Mesh.cpp  Mesh.h  README.md  TensorWrapper.h  Top3d.cpp  Top3d.h  Util.cpp  Util.h
da-sha/sha-volume-mesh/: matmesh.cpp  matmesh.h  mesh.cpp  mesh.h
da-sha/sha-voronoi-foundation/: declarations.h  fast_voronoi.cpp  fast_voronoi.h  utility.cpp  utility.h  voronoi.cpp  voronoi.h
scripts/: init.sh
(+1114 files in other folders)
